--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java.version>1.8</java.version>
 
         <druid-spring-boot-starter.version>1.1.21</druid-spring-boot-starter.version>
+        <easyexcel.version>2.1.4</easyexcel.version>
     </properties>
 
     <dependencies>
@@ -98,6 +99,12 @@
             <artifactId>jackson-dataformat-yaml</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
