重构-邀请码

--- a/classrepair-system/pom.xml
+++ b/classrepair-system/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>classrepair-qatype</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-invitation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
