--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -16,6 +16,7 @@
         <module>../classrepair-invitation</module>
         <module>../classrepair-classroom</module>
         <module>../classrepair-qatype</module>
+        <module>../classrepair-repair-item</module>
     </modules>
 
     <parent>
@@ -82,6 +83,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
     </dependencies>
