--- a/classrepair-system/pom.xml
+++ b/classrepair-system/pom.xml
@@ -42,6 +42,12 @@
             <artifactId>classrepair-invitation</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-repair-item</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
