--- a/classrepair-common/.gitignore
+++ b/classrepair-common/.gitignore
@@ -80,4 +80,4 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-/src/main/resources/application-product.yml
+/application-wx.yml
