调整部分接口权限，修复日志显示参数问题

--- a/classrepair-common/.gitignore
+++ b/classrepair-common/.gitignore
@@ -80,4 +80,4 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-/application-wx.yml
+/src/main/resources/application-wx.yml
