增加获取网页登录接口

--- a/classrepair-user/pom.xml
+++ b/classrepair-user/pom.xml
@@ -34,7 +34,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>${argon2-jvm.version}</version>
+        </dependency>
+    </dependencies>
 
 </project>
