--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -43,6 +43,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <weixin-java-miniapp.version>3.6.0</weixin-java-miniapp.version>
         <fastjson.version>1.2.60</fastjson.version>
+        <argon2-jvm.version>2.5</argon2-jvm.version>
     </properties>
 
     <dependencies>
