改变token密码生成策略

--- a/classrepair-common/pom.xml
+++ b/classrepair-common/pom.xml
@@ -37,5 +37,11 @@
             <version>${java-jwt.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>de.mkammerer</groupId>
+            <artifactId>argon2-jvm</artifactId>
+            <version>${argon2-jvm.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
