--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,18 +10,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: actions/cache@v1
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
     - name: Set up JDK 8
       uses: actions/setup-java@master
       with:
         java-version: 8
     - name: Build and test project
       run:  mvn clean package -f classrepair-dependencies/pom.xml
+    - uses: actions/cache@master
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
     - name: Build Docker container
       run: docker build -t weacsoft:latest .
     - name: push to aliyun
