--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,12 +17,12 @@ jobs:
     - name: Build and test project
       run:  mvn clean package -f classrepair-dependencies/pom.xml
     - name: Cache maven
-      uses: actions/cache@master
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
+      uses: actions/cache@v1
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
     - name: Build Docker container
       run: docker build -t weacsoft:latest .
     - name: push to aliyun
