--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,13 @@ script:
   - docker login --username=${registryu} registry.cn-shenzhen.aliyuncs.com --password=${registryp}
   - docker tag weacsoft:latest registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair
   - docker push registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker login --username=${registryu} registry.cn-shenzhen.aliyuncs.com --password=${registryp}'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker stop classrepair && docker rm classrepair'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker stop classrepair && docker rm classrepair'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker rmi registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker pull registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker run --name classrepair --restart=always -p 8085:8085 registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair -Dspring.profiles.active=product'
-  -
+
 branches:
   only:
   - master
