--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker stop classrepair && docker rm classrepair'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker rmi registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker pull registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
-  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker run --name classrepair --restart=always -p 8085:8085 registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair -Dspring.profiles.active=product'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker run --name classrepair --restart=always -v /home/room/log:/log -p 8085:8085 registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair -Dspring.profiles.active=product'
 
 branches:
   only:
