--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker stop classrepair && docker rm classrepair'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker rmi registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker pull registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
-  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker run --name classrepair --restart=always -v /home/room/log:/log -p 8085:8085 -e JAVA_OPTS=-Dspring.profiles.active=product registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker run --name classrepair --restart=always -v /home/room/log:/log -p 8085:8085 --network mysql_network -e JAVA_OPTS=-Dspring.profiles.active=product registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair'
 
 branches:
   only:
