保存配置到private repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
   - ssh-keyscan ${ip} >> ~/.ssh/known_hosts
 
 script:
-  - ${download}
+  - wget -q -nv -O application-product.yml https://raw.githubusercontent.com/GreenHatHG/classrepair-config/master/application-product.yml?token=${token} >/dev/null 2>/dev/null && mv application-product.yml classrepair-system/src/main/resources && ls classrepair-system/src/main/resources
   - mvn clean package -f classrepair-dependencies/pom.xml
   - docker build -t weacsoft:latest .
   - docker login --username=${registryu} registry.cn-shenzhen.aliyuncs.com --password=${registryp}
