classroom表增加classid字段 && 修改根据id查询课室接口

--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,5 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 /src/main/resources/application.yml
-/log
+log
 docker-compose.yml
