导出统计订单excle

--- a/classrepair-system/.gitignore
+++ b/classrepair-system/.gitignore
@@ -82,3 +82,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 src/main/resources/application-product.yml
 src/main/resources/application-dev.yml
+repair_item.xlsx
