--- a/classrepair-classroom/.gitignore
+++ b/classrepair-classroom/.gitignore
@@ -80,5 +80,4 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
-
-/src/main/resources/
+/src/main/resources/application-wx.yml
