修改jwt过期时间&&添加分类问题接口(未测试)

--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -15,9 +15,10 @@
         <module>../classrepair-system</module>
         <module>../classrepair-invitation</module>
         <module>../classrepair-classroom</module>
-        <module>../classrepair-qatype</module>
+        <module>../classrepair-qa-type</module>
         <module>../classrepair-repair-item</module>
         <module>../classrepair-statistics</module>
+        <module>../classrepair-qa-answer</module>
     </modules>
 
     <parent>
