添加某分类下的常见问题

--- a/classrepair-qa-answer/pom.xml
+++ b/classrepair-qa-answer/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>classrepair-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-qa-type</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
