使用wxjavasdk && dockerfile增加时区

--- a/classrepair-common/pom.xml
+++ b/classrepair-common/pom.xml
@@ -43,5 +43,12 @@
             <version>${argon2-jvm.version}</version>
         </dependency>
 
+        <!-- 小程序开发包-->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-miniapp</artifactId>
+            <version>${WxJava.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
