--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -46,6 +46,7 @@
         <weixin-java-miniapp.version>3.6.0</weixin-java-miniapp.version>
         <fastjson.version>1.2.60</fastjson.version>
         <argon2-jvm.version>2.5</argon2-jvm.version>
+        <WxJava.version>3.6.0</WxJava.version>
     </properties>
 
     <dependencies>
