--- a/classrepair-system/pom.xml
+++ b/classrepair-system/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>classrepair-qa-answer</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-time-table</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
