--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,13 @@ script:
   - mvn clean package -f classrepair-dependencies/pom.xml
   - sshpass -p ${pwd} scp classrepair-system/target/*.jar ${user}@${ip}:${filepath}
   - docker build -t weacsoft:latest .
-  - docker login --username=${registryu} registry.cn-shenzhen.aliyuncs.com --password=${registryp}
-  - docker tag weacsoft:latest registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair
+  - docker login --username=${registryu} registry.cn-hongkong.aliyuncs.com --password=${registryp}
+  - docker tag weacsoft:latest  registry.cn-hongkong.aliyuncs.com/greenhathg/classrepair
   - docker push registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest
-  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker login --username=${registryu} registry.cn-shenzhen.aliyuncs.com --password=${registryp}'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker login --username=${registryu} registry.cn-hongkong.aliyuncs.com --password=${registryp}'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'cd /home/room/classrepair-java && docker-compose down'
-  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker rmi registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
-  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker pull registry.cn-shenzhen.aliyuncs.com/classrepair/classrepair:latest'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker rmi  registry.cn-hongkong.aliyuncs.com/greenhathg/classrepair:latest'
+  - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'docker pull  registry.cn-hongkong.aliyuncs.com/greenhathg/classrepair:latest'
   - sshpass -p ${pwd} ssh -o StrictHostKeyChecking=no ${user}@${ip}  'cd /home/room/classrepair-java && docker-compose up -d'
 
 branches:
