添加websocket&&修改repair_item表type字段

--- a/classrepair-statistics/pom.xml
+++ b/classrepair-statistics/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>classrepair-repair-item</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-qa</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
