--- a/classrepair-repair-item/pom.xml
+++ b/classrepair-repair-item/pom.xml
@@ -14,14 +14,18 @@
 
     <dependencies>
         <dependency>
-        <groupId>team.weacsoft.classrepair</groupId>
-        <artifactId>classrepair-common</artifactId>
-        <version>${project.version}</version>
-    </dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>team.weacsoft.classrepair</groupId>
             <artifactId>classrepair-user</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
     </dependencies>
 
