下单订阅消息test pass

--- a/classrepair-repair-item/pom.xml
+++ b/classrepair-repair-item/pom.xml
@@ -24,6 +24,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-qa</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
