添加定时发送到微信公众号功能

--- a/classrepair-repair-item/pom.xml
+++ b/classrepair-repair-item/pom.xml
@@ -29,8 +29,18 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-time-table</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!--        cron job       -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
     </dependencies>
 
