完成了用户侧-提交用户反馈接口

--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -19,6 +19,7 @@
         <module>../classrepair-invitation</module>
         <module>../classrepair-statistics</module>
         <module>../classrepair-repair-log</module>
+        <module>../classrepair-user-feedback</module>
     </modules>
 
     <parent>
