--- a/classrepair-system/pom.xml
+++ b/classrepair-system/pom.xml
@@ -53,6 +53,11 @@
             <artifactId>classrepair-repair-log</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrepair-user-feedback</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
     </dependencies>
     <build>
