新增材料模块 新增材料增删改查接口

--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -20,6 +20,7 @@
         <module>../classrepair-statistics</module>
         <module>../classrepair-repair-log</module>
         <module>../classrepair-user-feedback</module>
+        <module>../classrpair-material</module>
     </modules>
 
     <parent>
