--- a/classrepair-system/pom.xml
+++ b/classrepair-system/pom.xml
@@ -58,7 +58,11 @@
             <artifactId>classrepair-user-feedback</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>team.weacsoft.classrepair</groupId>
+            <artifactId>classrpair-material</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
