添加获取所有订单接口 添加material模块的pom文件缺少的内容

--- a/classrpair-material/pom.xml
+++ b/classrpair-material/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>classrepair-dependencies</artifactId>
         <groupId>team.weacsoft.classrepair</groupId>
         <version>1.0.0</version>
+        <relativePath>../classrepair-dependencies/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
