两个重构模块： 订单管理-admin 订单管理-user
增加材料管理模块
1、添加材料种类
2、获取材料种类
3、修改材料种类
4、删除材料种类
5、添加材料
6、修改材料
7、查询材料

--- a/classrepair-dependencies/pom.xml
+++ b/classrepair-dependencies/pom.xml
@@ -20,8 +20,8 @@
         <module>../classrepair-statistics</module>
         <module>../classrepair-repair-log</module>
         <module>../classrepair-user-feedback</module>
-        <module>../classrpair-material</module>
-        <module>../classrepair-order</module>
+        <module>../classrepair-material-v3</module>
+        <module>../classrepair-orders</module>
     </modules>
 
     <parent>
